feat(board): 게시글 생성 API 구현
- 에러 핸들러 추가
- 커스텀 어노테이션 (@ExistTeacher) 추가
